Enum types on domain model represented by strings. property naming and CORS issue fixed. swagger improved. The 'Vote' literal changed to 'Rate'
